--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
         
         <!-- 搜索区域 -->
         <div class="search-container">
-            <input type="text" id="search-input" placeholder="输入查询词（如AI、climate）...">
+            <input type="text" id="search-input" placeholder="输入查询词（如AI、climate）..." autocomplete="off">
             <button id="search-button">搜索</button>
             <!-- 建议列表容器 -->
             <div id="suggestions" class="suggestions"></div>
